Standard Charset usage.